@startuml
skinparam classAttributeIconSize 0

class InputManager {
    +openWindow(idx:int):void
}

Document *-- InputManager: inputManager
InputManager o-- Document : doc

Document *-- XFormGraph : graph
XFormGraph o-- Document  : doc

abstract class Input {
    -activeMethod:int
    +get():ImageCube
}

InputManager *--o "4" Input : inputs

Input *--o "0..*" InputMethod : methods

InputMethod <|-- "XXXInputMethod"
note left: Lots of these (well, five)

InputMethod o-- Input : input
InputMethod *-- Datum : data

XFormGraph *-- "0..*" XForm: nodes
XFormInput ..> Input: "reads from"

abstract class XForm {
}

XFormInput --|> XForm
XForm o-- XFormGraph : graph

Input *--o "0..1" InputWindow : window

class XFormInput {
    +inputIdx:int
    -getInput():Input
}

XFormInput ..> InputManager: "can fetch\nsingleton of"
@enduml
